@@ -64,7 +64,7 @@ public class ShowReplacement {
         assertTrue(CompilerUtils.compile(Paths.get(TEST_SRC, "src", "q"),
                                          CLASSES_DIR,
                                          "-cp", tmp.toString(),
-                                         "-XaddExports:java.base/sun.security.util=ALL-UNNAMED"));
+                                         "--add-exports=java.base/sun.security.util=ALL-UNNAMED"));
     }
 
     @Test
